# PracticeTemp

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeCube.sln  CMakeCube.vcxproj  CMakeCube.vcxproj.filters  CMakeLists.txt  Cube.cpp  Cube.h  Cube_libs.vcxproj  Cube_libs.vcxproj.filters  DataPoint.cpp  DataPoint.h  Dimension.cpp  Dimension.h  DimensionMark.cpp  DimensionMark.h  DimensionPosition.cpp  DimensionPosition.h  Fact.cpp  Fact.h  FactClassifier.cpp  FactClassifier.h  INSTALL.vcxproj  INSTALL.vcxproj.filters  Measure.cpp  Measure.h  Metric.cpp  Metric.h  Selection.cpp  Selection.h  Source.cpp  Variant.h  Variant2.h  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  cmake_uninstall.cmake  date.cpp  (+26 more)
GH/: Cube.cpp  Cube.h  DataPoint.cpp  DataPoint.h  Dimension.cpp  Dimension.h  Fact.cpp  Fact.h  Measure.cpp  Measure.h  Selection.cpp  Selection.h  Source.cpp
Tests/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCubeTest.sln  CMakeCubeTest.vcxproj  CMakeCubeTest.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  main.cpp  test.cpp
gtest/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  googletest-distribution.sln
gtest/googlemock/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  gmock.sln  gmock.vcxproj  gmock.vcxproj.filters  gmock_main.vcxproj  gmock_main.vcxproj.filters
gtest/googletest/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  gtest.sln  gtest.vcxproj  gtest.vcxproj.filters  gtest_main.vcxproj  gtest_main.vcxproj.filters
src/: cube.cpp  cube.cpp.bak  cube.h  cubetime.cpp  cubetime.h  cubetime.h.bak  date.cpp  date.h  datetime.h  dimension.cpp  dimension.h  dimensionmark.cpp  dimensionmark.h  fact.cpp  fact.h  factclassifier.cpp  factclassifier.h  metric.cpp  metric.h  selection.cpp  selection.h  source.cpp  variant.cpp  variant.cpp.bak  variant.h
test/: main.cpp  main.cpp.bak  test.cpp  test.cpp.bak
